2023-11-13T16:12:20Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6852639659 # 2076
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-13
* notice: last 14d: unq all: 13 41
* notice: prev accum: outdated-unq outdated-all / unq all: 644 1988 / 660 2029
* notice: next accum: outdated-unq outdated-all / unq all: 644 1988 / 661 2030
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-30 2023-11-13]

2023-11-12T16:10:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6841755457 # 2073
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-12
* notice: last 14d: unq all: 13 41
* notice: prev accum: outdated-unq outdated-all / unq all: 643 1877 / 660 2029
* notice: next accum: outdated-unq outdated-all / unq all: 644 1988 / 660 2029
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-10-29] / []

2023-11-10T00:43:02Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6819224106 # 2065
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-10
* notice: last 14d: unq all: 13 152
* notice: prev accum: outdated-unq outdated-all / unq all: 643 1877 / 659 2028
* notice: next accum: outdated-unq outdated-all / unq all: 643 1877 / 660 2029
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +3 +11 -0 -0 / 3 11
* notice: removed / changed dates: [] / [2023-11-09]

2023-11-09T16:12:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6814441925 # 2064