@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-11-13T16:12:20Z",
-  "count_outdated" : 1988,
-  "uniques_outdated" : 644,
-  "count" : 2030,
-  "uniques" : 661,
+  "timestamp" : "2023-11-14T00:43:11Z",
+  "count_outdated" : 1992,
+  "uniques_outdated" : 646,
+  "count" : 2031,
+  "uniques" : 662,
   "views" : [
-    {
-      "timestamp": "2023-10-30T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 4 ],
-      "count_decinc": [ 1, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-10-31T00:00:00Z",
       "count": 15,
@@ -88,12 +79,12 @@
     },
     {
       "timestamp": "2023-11-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
