@@ -1,12 +1,7 @@
 {
-  "count": 41,
+  "count": 39,
   "uniques": 13,
   "views": [
-    {
-      "timestamp": "2023-10-30T00:00:00Z",
-      "count": 3,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-10-31T00:00:00Z",
       "count": 15,
@@ -49,8 +44,8 @@
     },
     {
       "timestamp": "2023-11-13T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
