@@ -1,3 +1,12 @@
+2023-11-14T00:43:11Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6857619634 # 2077
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-14
+* notice: last 14d: unq all: 13 39
+* notice: prev accum: outdated-unq outdated-all / unq all: 644 1988 / 661 2030
+* notice: next accum: outdated-unq outdated-all / unq all: 646 1992 / 662 2031
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [2023-10-30] / [2023-11-13]
+
 2023-11-13T16:12:20Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6852639659 # 2076
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-13
